# ocaml-simdjson

./: .gitignore  LICENSE.md  simdjson.opam
async/: dune  simdjson_async.ml  simdjson_async.mli
lib/: dune  mlsimdjson.cpp  simdjson.ml  simdjson.mli
test/: 2020-11-10_22-53-43.426713.raw.tmp  depth.json  dune  exchangeInfo.json  test.ml
